bin_PROGRAMS = pingdht finddht getpeersdht getpeersdht_r finddht_r get_peers btcodec_bench

pingdht_SOURCES = pingdht.cc btcodec.cc btcodec.h
finddht_SOURCES = finddht.cc btcodec.cc btcodec.h
finddht_r_SOURCES = finddht_r.cc btcodec.cc btcodec.h
getpeersdht_SOURCES = getpeersdht.cc btcodec.cc btcodec.h
getpeersdht_r_SOURCES = getpeersdht_r.cc btcodec.cc btcodec.h
get_peers_SOURCES = get_peers.cc
btcodec_bench_SOURCES = btcodec_bench.cc btcodecx.cc
