SBDIRS = btdht
bin_PROGRAMS = btload
btload_SOURCES = bthread.cc bsocket.cc biothread.cc burlget.cc main.cc boutfile.cc btcodec.cc sha1.cc bpeermgr.cc btracker.cc bqueue.cc bpeer.cc bclock.cc butils.cc boffer.cc bupdown.cc bchunk.cc bitfield.cc bfiled.cc

btload_LDADD = \
	$(top_srcdir)/src/btdht/libsub_btdht.a
