noinst_LIBRARIES = libsub_btdht.a

libsub_btdht_a_SOURCES = \
	provider.cc  \
	transfer.cc \
	btkad.cc    \
	knode.cc    \
	kbucket.cc  \
	kfind.cc    \
	kfind.h     \
	kutils.cc   \
	provider.h  \
	kbucket.h   \
	knode.h     \
	btkad.h     \
	transfer.h  \
	tracker.h
	

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir) -I$(top_srcdir)$(WS2_INCLUDE)
