noinst_LIBRARIES = libsub_btdht.a

libsub_btdht_a_SOURCES = \
	provider.cc \
	transfer.cc \
	btkad.cc    \
	knode.cc    \
	kbucket.cc  \
	refresh.cc  \
	refresh.h   \
	kfind.cc    \
	kgetpeers.cc \
	kgetpeers.h  \
	kpingd.h     \
	kpingd.cc    \
	bootupd.h    \
        bootupd.cc   \
	checkerd.h  \
	checkerd.cc \
	services.cc \
	services.h  \
	kfind.h     \
	kutils.cc   \
	kutils.h    \
	provider.h  \
	kbucket.h   \
	knode.h     \
	btkad.h     \
	ktable.h    \
	ktable.cc   \
	loadsess.cc \
	loadsess.h  \
	transfer.h
	

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir) -I$(top_srcdir)$(WS2_INCLUDE)
