noinst_LIBRARIES = libsub_btdht.a

libsub_btdht_a_SOURCES = \
	bdhtnet.cc  \
	bdhtident.cc   \
	bdhtorrent.cc  \
	bdhtboot.cc    \
	bdhtroute.cc   \
	bdhtransfer.cc \
	bdhtransfer.h  \
	bdhtroute.h    \
	bdhtboot.h     \
	bdhtorrent.h   \
	bdhtident.h    \
	bdhtnet.h
	

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
